--- a/frontend/src/app/components/shortener-form/shortener-form.component.css
+++ b/frontend/src/app/components/shortener-form/shortener-form.component.css
@@ -11,7 +11,7 @@ form {
 
 
 .input {
-    width: 250px;
+    width: 100%;
 }
 
 .card {
